--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --progress",
     "watch": "webpack --progress --colors --watch",
     "start": "webpack-dev-server --progress",
     "server": "nodemon server.js"
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "css-loader": "^0.28.7",
+    "env": "^0.0.2",
     "file-loader": "^1.1.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "style-loader": "^0.19.0"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "style-loader": "^0.19.0",
+    "webpack-cli": "^3.0.8"
   }
 }
