--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --progress",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
     "watch": "webpack --progress --colors --watch",
     "start": "webpack-dev-server --progress",
     "server": "nodemon server.js"
@@ -22,7 +23,7 @@
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "uglifyjs-webpack-plugin": "^1.1.2",
-    "webpack": "^3.10.0",
+    "webpack": "^4.15.1",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-dev-server": "^2.9.7"
   },
