--- a/package.json
+++ b/package.json
@@ -4,36 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "watch": "webpack --progress --colors --watch",
-    "start": "webpack-dev-server --progress",
-    "server": "nodemon server.js"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "express": "^4.16.2",
-    "html-webpack-plugin": "^2.30.1",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "webpack": "^4.15.1",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-dev-server": "^2.9.7"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "css-loader": "^0.28.7",
-    "env": "^0.0.2",
-    "file-loader": "^1.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "style-loader": "^0.19.0",
-    "webpack-cli": "^3.0.8"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
